# langserve-test-2

./: .gitignore  pyproject.toml
api/: pyproject.toml
api/app/: server.py
