[tool.poetry]
name = "langserve-test-2"
version = "0.1.0"
description = ""
authors = ["RoskiDeluge <roberto.delgado@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
langchain-cli = "^0.0.20"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
